--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,11 @@ h2,
   background-color: rgb(254, 249, 167);
   border: 5px solid rgb(142, 50, 0);
 }
+.container-rules-overlay {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
 .rules-heading {
   font-family: "Press Start 2P", cursive;
   text-align: center;
