--- a/styles.css
+++ b/styles.css
@@ -1,108 +1,122 @@
 body {
-  text-align: center;
-  background-color: #011f3f;
+    text-align: center;
+    background-color: #011f3f;
 }
 
 #level-title {
-  font-family: "Press Start 2P", cursive;
-  font-size: 3rem;
-  margin: 5%;
-  color: #fef2bf;
+    font-family: "Press Start 2P", cursive;
+    font-size: 3rem;
+    margin: 5%;
+    color: #fef2bf;
 }
 h2,
 .highScore {
-  font-family: "Press Start 2P", cursive;
-  font-size: 2rem;
-  color: #fef2bf;
+    font-family: "Press Start 2P", cursive;
+    font-size: 2rem;
+    color: #fef2bf;
 }
 .btn-rules {
-  position: absolute;
-  left: 2rem;
-  top: 12rem;
-  font-size: 1.4rem;
-  color: #fef2bf;
-  font-family: "Press Start 2P", cursive;
+    position: absolute;
+    left: 2rem;
+    top: 12rem;
+    font-size: 1.4rem;
+    color: #fef2bf;
+    font-family: "Press Start 2P", cursive;
 }
 
 .btn-rules:hover {
-  cursor: pointer;
-  color: #edd87c;
+    cursor: pointer;
+    color: #edd87c;
 }
 .container {
-  display: block;
-  width: 50%;
-  margin: auto;
+    display: block;
+    width: 50%;
+    margin: auto;
 }
 
 .btn {
-  margin: 25px;
-  display: inline-block;
-  height: 200px;
-  width: 200px;
-  border: 10px solid black;
-  border-radius: 20%;
+    margin: 25px;
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
+    border-radius: 20%;
 }
 
 .game-over {
-  background-color: red;
-  opacity: 0.8;
+    background-color: red;
+    opacity: 0.8;
 }
 
 .red {
-  background-color: red;
+    background-color: red;
 }
 
 .green {
-  background-color: green;
+    background-color: green;
 }
 
 .blue {
-  background-color: blue;
+    background-color: blue;
 }
 
 .yellow {
-  background-color: yellow;
+    background-color: yellow;
 }
 
 .pressed {
-  box-shadow: 0 0 20px white;
-  background-color: grey;
+    box-shadow: 0 0 20px white;
+    background-color: grey;
 }
 .container-rules {
-  position: absolute;
-  transform: translate(30%, -35%);
-  margin: 15% auto;
-  padding: 5%;
-  width: 50%;
-  background-color: #fef9a7;
-  border: 5px solid #8e3200;
+    position: absolute;
+    transform: translate(30%, -35%);
+    margin: 15% auto;
+    padding: 5%;
+    width: 50%;
+    background-color: #fef9a7;
+    border: 5px solid #8e3200;
+    z-index: 2;
 }
 
 .rules-heading {
-  font-family: "Press Start 2P", cursive;
-  text-align: center;
-  font-size: 3rem;
-  margin-bottom: 2rem;
+    font-family: "Press Start 2P", cursive;
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 2rem;
 }
 .rules {
-  text-align: left;
-  font-family: "Press Start 2P", cursive;
-  font-size: 1rem;
-  margin-bottom: 1rem;
+    text-align: left;
+    font-family: "Press Start 2P", cursive;
+    font-size: 1rem;
+    margin-bottom: 1rem;
 }
 .btn-container {
-  text-align: center;
+    text-align: center;
 }
 .btn-close {
-  padding: 0.5rem 2rem;
-  font-size: 1.2rem;
-  background-color: #dea057;
-  color: #8e3200;
+    padding: 0.5rem 2rem;
+    font-size: 1.2rem;
+    background-color: #dea057;
+    color: #8e3200;
 }
 .btn-close:hover {
-  cursor: pointer;
-  background-color: #f4c38b;
+    cursor: pointer;
+    background-color: #f4c38b;
 }
 .box-show {
-  visibility: hidden;
+    visibility: hidden;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    /* backdrop-filter: blur(3px); */
+    z-index: 1;
+}
+
+.hidden {
+    display: none;
 }
