--- a/styles.css
+++ b/styles.css
@@ -78,15 +78,15 @@ h2,
     border: 5px solid #8e3200;
     z-index: 2;
 }
-
+/* 
 .container-rules {
-    position: fixed;
+    position: absolute;
     transform: translate(-50%);
     left: 50%;
     padding: 5%;
     background-color: rgb(254, 249, 167);
     border: 5px solid rgb(142, 50, 0);
-}
+} */
 .container-rules-overlay {
     width: 100%;
     height: 100%;
@@ -124,9 +124,9 @@ h2,
 .overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgba(0, 0, 0, 0);
-    /* backdrop-filter: blur(3px); */
+    backdrop-filter: blur(3px);
     z-index: 1;
 }
 
