--- a/styles.css
+++ b/styles.css
@@ -2,45 +2,83 @@ body {
   text-align: center;
   background-color: #011f3f;
 }
-
-#level-title {
-  font-family: "Press Start 2P", cursive;
-  font-size: 3rem;
-  margin: 5%;
-  color: #fef2bf;
-}
-h2,
-.highScore {
-  font-family: "Press Start 2P", cursive;
-  font-size: 2rem;
-  color: #fef2bf;
-}
 .btn-rules {
-  position: absolute;
-  left: 2rem;
-  top: 12rem;
-  font-size: 1.4rem;
-  color: #fef2bf;
+  font-size: 1rem;
+  color: #bffec4;
   font-family: "Press Start 2P", cursive;
 }
-
 .btn-rules:hover {
   cursor: pointer;
-  color: #edd87c;
+  color: #85ed7c;
 }
 .container {
   display: block;
-  width: 50%;
-  margin: auto;
+  height: 100vh;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-.btn {
-  margin: 25px;
-  display: inline-block;
-  height: 200px;
-  width: 200px;
-  border: 10px solid black;
-  border-radius: 20%;
+/* I edit the btn and level title so its display smaller in mobile device */
+  .btn {
+    margin: 25px;
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
+    border-radius: 20%;
+  }
+  @media (max-width: 600px) {
+    .btn {
+      margin: 10px;
+      display: inline-block;
+      height: 150px;
+      width: 150px;
+      border: 8px solid black;
+      border-radius: 20%;
+    }
+  }
+  @media (max-width: 400px) {
+    .btn {
+      margin: 10px;
+      display: inline-block;
+      height: 100px;
+      width: 100px;
+      border: 7px solid black;
+      border-radius: 20%;
+    }
+  }
+
+  #level-title {
+    font-family: "Press Start 2P", cursive;
+    font-size: 2em;
+    color: #fef2bf;
+    margin: 48px 4px;
+  }
+  h2,
+  .highScore {
+    font-family: "Press Start 2P", cursive;
+    font-size: 1rem;
+    color: #fef2bf;
+  }
+  @media (min-width: 480px) {
+    #level-title {
+      font-family: "Press Start 2P", cursive;
+      font-size: 3em;
+      margin: 5%;
+      color: #fef2bf;
+    }
+    h2,
+    .highScore {
+      font-family: "Press Start 2P", cursive;
+      font-size: 1.5rem;
+      color: #fef2bf;
+    }
+  }
+/* end edit */
+
+.flex {
+  display: flex;
+  flex-direction: column;
 }
 
 .game-over {
@@ -74,6 +112,7 @@ h2,
   transform: translate(-50%);
   left: 50%;
   padding: 5%;
+  margin-top: 48px;
   background-color: rgb(254, 249, 167);
   border: 5px solid rgb(142, 50, 0);
 }
