--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,115 @@
+html,
 body {
   text-align: center;
   background-color: #011f3f;
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
-.btn-rules {
-  font-size: 1rem;
-  color: #bffec4;
+
+/* title & highscore */
+#level-title {
   font-family: "Press Start 2P", cursive;
+  font-size: 2em;
+  margin: 32px 0;
+  color: #fef2bf;
 }
-.btn-rules:hover {
-  cursor: pointer;
-  color: #85ed7c;
+h2,
+.highScore {
+  font-family: "Press Start 2P", cursive;
+  font-size: 1.4rem;
+  margin: 0 32px;
+  color: #fef2bf;
 }
-.container {
-  display: block;
-  height: 100vh;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-/* I edit the btn and level title so its display smaller in mobile device */
-  .btn {
-    margin: 25px;
-    display: inline-block;
-    height: 200px;
-    width: 200px;
-    border: 10px solid black;
-    border-radius: 20%;
-  }
-  @media (max-width: 600px) {
-    .btn {
-      margin: 10px;
-      display: inline-block;
-      height: 150px;
-      width: 150px;
-      border: 8px solid black;
-      border-radius: 20%;
-    }
-  }
-  @media (max-width: 400px) {
-    .btn {
-      margin: 10px;
-      display: inline-block;
-      height: 100px;
-      width: 100px;
-      border: 7px solid black;
-      border-radius: 20%;
-    }
-  }
-
+/* title & highscore sm */
+@media (min-width: 650px) {
   #level-title {
     font-family: "Press Start 2P", cursive;
-    font-size: 2em;
+    font-size: 3em;
+    margin: 5%;
     color: #fef2bf;
-    margin: 48px 4px;
   }
   h2,
   .highScore {
     font-family: "Press Start 2P", cursive;
-    font-size: 1rem;
+    font-size: 2rem;
+    padding: 32px 16px;
     color: #fef2bf;
   }
-  @media (min-width: 480px) {
-    #level-title {
-      font-family: "Press Start 2P", cursive;
-      font-size: 3em;
-      margin: 5%;
-      color: #fef2bf;
-    }
-    h2,
-    .highScore {
-      font-family: "Press Start 2P", cursive;
-      font-size: 1.5rem;
-      color: #fef2bf;
-    }
-  }
-/* end edit */
+}
 
+/* game container */
+.btn {
+  margin: 25px;
+  display: inline-block;
+  height: 200px;
+  width: 200px;
+  border: 10px solid black;
+  border-radius: 20%;
+}
+.btn-rules {
+  position: absolute;
+  top: 20%;
+  left: 32px;
+  font-size: 1.4rem;
+  color: #fef2bf;
+  font-family: "Press Start 2P", cursive;
+}
+.container {
+  display: block;
+  height: 100vh;
+}
 .flex {
   display: flex;
   flex-direction: column;
+}
+
+@media (max-width: 900px) {
+  .btn {
+    margin: 10px;
+    display: inline-block;
+    height: 150px;
+    width: 150px;
+    border: 8px solid black;
+    border-radius: 20%;
+  }
+  .btn-rules {
+    position: absolute;
+    top: 5%;
+    left: 32px;
+    font-size: 1.4rem;
+    color: #fef2bf;
+    font-family: "Press Start 2P", cursive;
+    /* border: 2px solid red; */
+  }
+  .container {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: 60vh;
+  }
+  .flex {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 400px) {
+  .btn {
+    margin: 10px;
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+    border: 6px solid black;
+    border-radius: 20%;
+  }
+}
+/* end edit */
+
+.btn-rules:hover {
+  cursor: pointer;
+  color: #ccc297;
 }
 
 .game-over {
@@ -110,9 +141,10 @@ body {
 .container-rules {
   position: fixed;
   transform: translate(-50%);
+  min-width: 360px;
   left: 50%;
   padding: 5%;
-  margin-top: 48px;
+  margin-top: 5%;
   background-color: rgb(254, 249, 167);
   border: 5px solid rgb(142, 50, 0);
 }
@@ -137,6 +169,7 @@ body {
   text-align: center;
 }
 .btn-close {
+  font-family: "Press Start 2P", cursive;
   padding: 0.5rem 2rem;
   font-size: 1.2rem;
   background-color: #dea057;
