--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ h2,
 .highScore {
   font-family: "Press Start 2P", cursive;
   font-size: 1.4rem;
-  margin: 0 32px;
   color: #fef2bf;
 }
 /* title & highscore sm */
@@ -33,7 +32,14 @@ h2,
   .highScore {
     font-family: "Press Start 2P", cursive;
     font-size: 2rem;
-    padding: 32px 16px;
+    color: #fef2bf;
+  }
+}
+@media (max-width: 360px) {
+  h2,
+  .highScore {
+    font-family: "Press Start 2P", cursive;
+    font-size: 1rem;
     color: #fef2bf;
   }
 }
