--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,17 @@ body {
 /* title & highscore */
 #level-title {
   font-family: "Press Start 2P", cursive;
-  font-size: 2em;
-  margin: 32px 0;
+  font-size: 2.2em;
+  padding: 24px;
   color: #fef2bf;
 }
 h2,
 .highScore {
   font-family: "Press Start 2P", cursive;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
+  padding: 0 8px;
   color: #fef2bf;
 }
-/* title & highscore sm */
 @media (min-width: 650px) {
   #level-title {
     font-family: "Press Start 2P", cursive;
@@ -46,56 +46,52 @@ h2,
 
 /* game container */
 .btn {
-  margin: 25px;
+  margin: 10px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
-  border: 10px solid black;
+  height: 150px;
+  width: 150px;
+  border: 8px solid black;
   border-radius: 20%;
 }
 .btn-rules {
-  position: absolute;
-  top: 20%;
-  left: 32px;
-  font-size: 1.4rem;
+  display: block;
+  font-size: 1rem;
   color: #fef2bf;
   font-family: "Press Start 2P", cursive;
 }
 .container {
-  display: block;
-  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  height: 80vh;
 }
 .flex {
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
-
-@media (max-width: 900px) {
+@media (min-width: 900px) {
   .btn {
-    margin: 10px;
+    margin: 25px;
     display: inline-block;
-    height: 150px;
-    width: 150px;
-    border: 8px solid black;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
     border-radius: 20%;
   }
   .btn-rules {
     position: absolute;
-    top: 5%;
+    top: 20%;
     left: 32px;
     font-size: 1.4rem;
     color: #fef2bf;
     font-family: "Press Start 2P", cursive;
-    /* border: 2px solid red; */
   }
   .container {
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    height: 60vh;
+    display: block;
+    height: 100vh;
   }
   .flex {
-    height: 100vh;
     display: flex;
     flex-direction: column;
   }
@@ -147,7 +143,7 @@ h2,
 .container-rules {
   position: fixed;
   transform: translate(-50%);
-  min-width: 360px;
+  min-width: 320px;
   left: 50%;
   padding: 5%;
   margin-top: 5%;
@@ -170,6 +166,20 @@ h2,
   font-family: "Press Start 2P", cursive;
   font-size: 1rem;
   margin-bottom: 1rem;
+}
+@media (max-width: 480px){
+  .rules-heading {
+    font-family: "Press Start 2P", cursive;
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+  .rules {
+    text-align: left;
+    font-family: "Press Start 2P", cursive;
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+  }
 }
 .btn-container {
   text-align: center;
