--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,11 @@ body {
   background-color: #011f3f;
   margin: 0;
   height: 100%;
-  overflow: hidden;
+}
+@media (max-width: 600px) {
+  body {
+    overflow: hidden;
+  }
 }
 
 /* title & highscore */
