Removed the error message from the css file

--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ h2 {
         font-size: 3em;
         margin: 5%;
         margin: 0;
-        #used to remove gap at the top of the screen,
-        since there is a scroll bar otherwise;
+        /* #used to remove gap at the top of the screen,
+        since there is a scroll bar otherwise; */
     }
     h2,
     .highScore {
