--- a/styles.css
+++ b/styles.css
@@ -158,12 +158,13 @@ h2 {
     margin-top: 5%;
     background-color: rgb(254, 249, 167);
     border: 5px solid rgb(142, 50, 0);
+    z-index: 2;
 }
-.container-rules-overlay {
+/* .container-rules-overlay {
     width: 100%;
     height: 100%;
     position: fixed;
-}
+} */
 .rules-heading {
     font-family: "Press Start 2P", cursive;
     text-align: center;
@@ -260,4 +261,17 @@ body.dark {
 
 h2.dark {
     color: #a170db;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(3px);
+    z-index: 1;
+}
+
+.hidden {
+    display: none;
 }
